deploy/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
