deploy/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  annotations:
    link.argocd.argoproj.io/external-link: https://open-webui.cace-1-dev.dramisinfo.com
spec:
  hostnames:
    - open-webui.cace-1-dev.dramisinfo.com
  parentRefs:
    - name: shared-gateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - name: open-webui
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
